# yggdrasil

./: .gitignore  CONTRIBUTING.md  Database.md  MyNextPlan.md  NetworkHardware.md  PlanMarch10.md  SECURITY.md  earth.html  test.txt  zero-shot-classifier.html
yggdrasil/: .env.example  Cargo.toml  LICENSE  README.md
yggdrasil/.github/workflows/: ci.yml
yggdrasil/configs/: test.html
yggdrasil/configs/agent/: config.example.json  config.json
yggdrasil/configs/agent-prompts/: docs.toml  executor.toml  general.toml  qa.toml  review.toml
yggdrasil/configs/cluster/: config.json  hugin.json  yggdrasil-node.service
yggdrasil/configs/dreamer/: config.example.json
yggdrasil/configs/energy/: config.json
yggdrasil/configs/ha/: cmdline-sensors-yggdrasil.yaml  dashboard-home.yaml  dashboard-yggdrasil.yaml  sensors-yggdrasil.yaml
yggdrasil/configs/huginn/: config.example.json  config.json  config.yaml
yggdrasil/configs/mcp-remote/: config.example.json  config.json  config.yaml
yggdrasil/configs/mcp-server/: config.example.json  config.json  config.yaml
yggdrasil/configs/mimir/: config.example.json  config.json  config.yaml
yggdrasil/configs/muninn/: config.example.json  config.json  config.yaml
yggdrasil/configs/odin/: config.example.json  config.json  node.yaml  node.yaml.bak.013
yggdrasil/configs/sentinel/: config.example.json  config.json  yggdrasil-sentinel.service
yggdrasil/configs/voice/: config.hugin.json  config.json
yggdrasil/crates/huginn/: Cargo.toml
yggdrasil/crates/mimir/: Cargo.toml
yggdrasil/crates/muninn/: Cargo.toml
yggdrasil/crates/odin/: Cargo.toml
yggdrasil/crates/ygg-agent/: Cargo.toml
yggdrasil/crates/ygg-cloud/: Cargo.toml
yggdrasil/crates/ygg-config/: Cargo.toml
yggdrasil/crates/ygg-domain/: Cargo.toml
yggdrasil/crates/ygg-dreamer/: Cargo.toml
yggdrasil/crates/ygg-embed/: Cargo.toml
yggdrasil/crates/ygg-energy/: Cargo.toml
yggdrasil/crates/ygg-gaming/: Cargo.toml
yggdrasil/crates/ygg-ha/: Cargo.toml
yggdrasil/crates/ygg-installer/: Cargo.toml
yggdrasil/crates/ygg-mcp/: Cargo.toml
yggdrasil/crates/ygg-mcp-remote/: Cargo.toml
yggdrasil/crates/ygg-mcp-server/: Cargo.toml
yggdrasil/crates/ygg-memory-fabric/: Cargo.toml
yggdrasil/crates/ygg-mesh/: Cargo.toml
yggdrasil/crates/ygg-node/: Cargo.toml
yggdrasil/crates/ygg-sentinel/: Cargo.toml
yggdrasil/crates/ygg-server/: Cargo.toml
yggdrasil/crates/ygg-store/: Cargo.toml
yggdrasil/crates/ygg-test-harness/: Cargo.toml
yggdrasil/crates/ygg-voice/: Cargo.toml
yggdrasil/deploy/: backup-hades.sh  gitea-sync.sh  install.sh  rollback.sh  update.sh  wait-for-health.sh
yggdrasil/deploy/config-templates/: code-docs-flow.json  code-qa-flow.json  coding-swarm-flow.json  complex-reasoning-flow.json  dba-flow.json  devops-flow.json  dream-flows.json  flow_scheduler-updates.json  home-automation-flow.json  research-flow.json  swarm-chat-flow.json  ui-design-flow.json
yggdrasil/deploy/hugin/: ollama-igpu.service  rocm-7.2-install.md  yggdrasil-lfm-audio.service  yggdrasil-llama-egpu.service  yggdrasil-llama-embed.service  yggdrasil-llama-igpu.service  yggdrasil-voice.service
yggdrasil/deploy/munin/: docker-compose.ipex-ollama.yml  docker-compose.ipex-vllm.yml  docker-compose.postgres.yml  llama-saga.service  yggdrasil-llama-igpu.service  yggdrasil-ollama-igpu.service  yggdrasil-ollama-ipex.service  yggdrasil-vllm-ipex.service  yggdrasil-voice.service
yggdrasil/deploy/nightjar/: deploy-grafana.sh  docker-compose.grafana.yml  prometheus.yml
yggdrasil/deploy/systemd/: claude-config-sync.service.example  morrigan-llama-server.service.example  yggdrasil-dreamer.service.example  yggdrasil-e2e-daily.service.example  yggdrasil-e2e-daily.timer  yggdrasil-gitea-sync.service  yggdrasil-gitea-sync.service.example  yggdrasil-gitea-sync.timer  yggdrasil-huginn.service  yggdrasil-huginn.service.example  yggdrasil-mcp-remote.service  yggdrasil-mcp-remote.service.example  yggdrasil-mcp-server@.service  yggdrasil-mimir.service  yggdrasil-mimir.service.example  yggdrasil-muninn.service  yggdrasil-odin.service  yggdrasil-odin.service.example
yggdrasil/deploy/workstation/: CLAUDE.md  ClaudeClient_Install  ClaudeClient_Install.ps1  MEMORY-bootstrap.md  claude-config-sync.ps1  claude-config-sync.sh  install-memory.sh  local-config.example.yaml  local-config.yaml  seed-insight-templates.sh  setup-sshfs.sh  ygg-hooks-init.sh  ygg-memory-ingest.sh  ygg-memory-recall.sh  ygg-memory.sh  ygg-session-recall.sh
yggdrasil/docs/: ARCHITECTURE.md  HARDWARE_OPTIMIZATION.md  MCP_TOOLS.md  NAMING_CONVENTIONS.md  NetworkHardware.md  OPERATIONS.md  USAGE.md  sprint-058-flows.html  sprint-059.md
yggdrasil/docs/atlas/: 2026-04-15-topology.md
yggdrasil/docs/audits/: csp-2026-04.md  sprint-069-baseline-2026-04-15.md  virtual-scroll-2026-04.md
yggdrasil/docs/reference/: llama-cpp-documentation.md  rocm-documentation.md
yggdrasil/migrations/: 001_engram_schema.down.sql  001_engram_schema.up.sql  002_index_metadata.down.sql  002_index_metadata.up.sql  003_sdr_events.down.sql  003_sdr_events.up.sql  004_sessions.down.sql  004_sessions.up.sql  005_tasks.down.sql  005_tasks.up.sql  006_engram_edges.down.sql  006_engram_edges.up.sql  007_config_sync.down.sql  007_config_sync.up.sql  008_project_isolation.down.sql  008_project_isolation.up.sql  009_spine.down.sql  009_spine.up.sql  010_fulltext.down.sql  010_fulltext.up.sql  011_confidence.down.sql  011_confidence.up.sql  012_documents.down.sql  012_documents.up.sql
yggdrasil/sprints/: sprint-026.md  sprint-028.md  sprint-029.md  sprint_000_infrastructure.md  sprint_002_mimir_mvp.md  sprint_003_huginn_mvp.md  sprint_004_muninn_mvp.md  sprint_005_odin_orchestrator.md  sprint_006_mcp_integration.md  sprint_007_ha_integration.md  sprint_008_mimir_advanced.md  sprint_009_hardware_optimization.md  sprint_010_production_hardening.md  sprint_011_hardening.md  sprint_013_hugin_moe_swap.md  sprint_014_munin_ipex_ollama.md  sprint_015_sdr_engrams.md  sprint_023_similarity_normalization.md
yggdrasil/tests-e2e/: conftest.py
(+404 files in other folders)
