[package]
name = "huginn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "huginn"
path = "src/main.rs"

[dependencies]
ygg-domain = { path = "../ygg-domain" }
ygg-config = { path = "../ygg-config" }
ygg-store = { path = "../ygg-store" }
ygg-embed = { path = "../ygg-embed" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
notify = { workspace = true }
tree-sitter = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
walkdir = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sd-notify = { workspace = true }
# Needed to iterate tree-sitter QueryMatches (uses StreamingIterator, not std Iterator).
streaming-iterator = "0.1"

# Tree-sitter grammar crates (not in workspace — only huginn uses them).
# Versions verified compatible with tree-sitter 0.24 (see sprint 003 decision log).
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-md = "0.5"
