[package]
name = "odin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "odin"
path = "src/main.rs"

[dependencies]
ygg-domain = { path = "../ygg-domain" }
ygg-embed = { path = "../ygg-embed" }
ygg-mcp = { path = "../ygg-mcp" }
ygg-ha = { path = "../ygg-ha" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sd-notify = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
