[package]
name = "odin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "odin"
path = "src/main.rs"

[dependencies]
ygg-domain = { path = "../ygg-domain" }
ygg-config = { path = "../ygg-config" }
ygg-server = { path = "../ygg-server" }
ygg-ha = { path = "../ygg-ha" }
ygg-cloud = { path = "../ygg-cloud" }
ygg-gaming = { path = "../ygg-gaming" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sd-notify = { workspace = true }
base64 = { workspace = true }
rustfft = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
