[package]
name = "ygg-dreamer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ygg-dreamer"
path = "src/main.rs"

[lib]
name = "ygg_dreamer"
path = "src/lib.rs"

[dependencies]
ygg-domain = { path = "../ygg-domain" }
ygg-config = { path = "../ygg-config" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
cron = "0.12"
axum = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
