[package]
name = "ygg-embed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# ONNX Runtime (in-process ML inference)
ort = { workspace = true }
tokenizers = { workspace = true }
ndarray = { workspace = true }
