[package]
name = "ygg-energy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ygg-domain = { path = "../ygg-domain" }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
