[package]
name = "ygg-ha"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ygg-domain = { path = "../ygg-domain" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
