[package]
name = "ygg-mcp-remote"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ygg-mcp-remote"
path = "src/main.rs"

[dependencies]
ygg-mcp = { path = "../ygg-mcp" }
ygg-domain = { path = "../ygg-domain" }
ygg-store = { path = "../ygg-store" }
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
