[package]
name = "ygg-memory-fabric"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Yggdrasil Shared Memory Fabric — cross-architecture working memory for the swarm"

[[bin]]
name = "ygg-memory-fabric"
path = "src/main.rs"

[lib]
name = "ygg_memory_fabric"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }
prometheus = "0.13"
blake3 = "1"
