[package]
name = "ygg-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ygg-node"
path = "src/main.rs"

[dependencies]
ygg-mesh = { path = "../ygg-mesh" }
ygg-domain = { path = "../ygg-domain" }
ygg-config = { path = "../ygg-config" }
ygg-energy = { path = "../ygg-energy" }
ygg-server = { path = "../ygg-server" }
tokio = { workspace = true }
tracing = { workspace = true }

clap = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

tokio-util = { workspace = true }
serde = { workspace = true }
