[package]
name = "ygg-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared HTTP service boilerplate: metrics, shutdown, health checks, error types, telemetry"

[dependencies]
ygg-domain = { path = "../ygg-domain" }
ygg-store = { path = "../ygg-store" }
ygg-embed = { path = "../ygg-embed" }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
sd-notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
