[package]
name = "ygg-voice"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ygg-voice"
path = "src/main.rs"

[dependencies]
ygg-domain = { path = "../ygg-domain" }
ygg-config = { path = "../ygg-config" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# ONNX Runtime for Whisper STT + Kokoro TTS inference (OpenVINO EP → NPU)
ort = { workspace = true }
ndarray = { workspace = true }

# Audio capture/playback
cpal = { workspace = true }
hound = { workspace = true }

# Mel spectrogram computation (FFT)
rustfft = { workspace = true }

# SDR command matching
dashmap = { workspace = true }
sha2 = { workspace = true }

# Health endpoint
axum = { workspace = true }

# Systemd readiness notification
sd-notify = { workspace = true }
