[package]
name = "ygg-voice"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ygg-voice"
path = "src/main.rs"

[dependencies]
ygg-config = { path = "../ygg-config" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Audio capture/playback
cpal = { workspace = true }
hound = { workspace = true }

# Health endpoint
axum = { workspace = true }

# WebSocket client (local mic → Odin voice pipeline)
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Systemd readiness notification
sd-notify = { workspace = true }
